syntax="proto3";

package template_service;
option go_package ="genproto/template_service";


message HealthCheckResponse {
  bool healthy = 1;
  string un_health_level = 2;
}
